--- a/index.html
+++ b/index.html
@@ -2268,7 +2268,7 @@ Diego Olivares - Amelie  Ramírez - Zhibin Xue
                                       </div>
                                     </h2>
                                     <p dir="ltr" class="zfr3Q CDt4Ke " style="text-align: center;">
-                                      <span class="C9DxTc " style="font-variant: normal;">Diego Olivares - Amelie&nbsp; Ramírez - Zhibin Xue&nbsp;</span>
+                                      <span class="C9DxTc " style="font-variant: normal;">Carla Espinoza - Gaspar Galaz,&nbsp; Renato Reyes - Constanza Alarcón - &nbsp;</span>
                                     </p>
                                   </div>
                                 </div>
