--- a/index.html
+++ b/index.html
@@ -2980,7 +2980,7 @@ Diego Olivares - Amelie  Ramírez - Zhibin Xue
                                                                             style="text-align: center"
                                                                         >
                                                                             <span class="C9DxTc" style=""
-                                                                                >Análisis de Tendencias en Videos
+                                                                                >AnDNDJFDJDSJ
                                                                                 Musicales de YouTube</span
                                                                             >
                                                                         </h2>
@@ -3003,7 +3003,7 @@ Diego Olivares - Amelie  Ramírez - Zhibin Xue
                                                                             <span
                                                                                 class="C9DxTc"
                                                                                 style="font-style: italic"
-                                                                                >Patrones que Influyen en el Éxito de
+                                                                                >PatrDFGHJKLJHGFDSn en el Éxito de
                                                                                 los Videos Musicales</span
                                                                             >
                                                                         </p>
