--- a/Pagina_web/graficos.html
+++ b/Pagina_web/graficos.html
@@ -261,7 +261,8 @@
       <div class="card-textt">
         <span class="badge">Explicación Gráfico 5</span>
         <p>
-        Notamos que la comuna con la mayor alza en sus promedios fue la comuna de providencia
+        Notamos que la comuna con la mayor alza en sus promedios fue la comuna de Providencia
+        y la de la menor fue La Florida
         </p>
       </div>
     </div>
@@ -311,6 +312,64 @@
         Esto demuestra que los establecimientos Científicos Humanistas aumentaron en la dispersión de sus promedios
         y que los establecimientos Técnicos no aumentaron la dispersión  notoriamente pero sí, hubo un crecimiento 
         en conjunto de los promedios.
+        </p>
+      </div>
+    </div>
+
+
+
+        <div class="card">
+      <img src="imagenes/correlacion_DEMRE.png" alt="Gráfico 8">
+      <div class="card-text">
+        <span class="badge">Gráfico 8</span>
+        <h2>Correlación entre años, periodos de pre- o post-pandemia, dependencia, ruralidad y  
+          método de enseñanza o promedio general</h2>
+        <p>
+          Buscamos responder si exite una correlación en la alza del rendimiento 
+          de los promedios de la enseñanza mendia y los años, periodos de pre- o post-pandemia, dependencia, ruralidad.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-textt">
+        <span class="badge">Explicación Gráfico 8</span>
+        <p>
+         No se presenta una gran correlación entre los datos de años, 
+          periodos de pre- o post-pandemia, su dependencia, ruralidad, 
+          método de enseñanza o promedio general, esto demostrando que
+           el cambio de notas no se generó por estas características 
+           principalmente, lo que aprueba más la teoría de que la 
+           pandemia afectó el NEM (esto también al tener la mayor 
+           correlación presente en el gráfico sin contar año/periodo).
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card">
+      <img src="imagenes/correlacion1.png" alt="Gráfico 8">
+      <div class="card-text">
+        <span class="badge">Gráfico 9</span>
+        <h2>Correlación entre los puntajes, la rama educacional, grupos de dependencia o años de los estudiantes </h2>
+        <p>
+        <p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-textt">
+        <span class="badge">Explicación Gráfico 9</span>
+        <p>
+         se puede observar cómo las correlaciones entre los puntajes,
+          la rama educacional, grupos de dependencia o años de los
+           estudiantes no muestran una gran relación entre ellos,
+            siendo la que existe entre año y promedio de puntajes 
+            con mayor relevancia en el gráfico presente, demostrando 
+            nuevamente cómo estos valores se relacionan debido a la 
+            pandemia de manera inversa, comprobando que aunque hayan 
+            aumentado los puntajes NEM, los resultados de las pruebas
+            de admisión no reflejan estos aumentos.
         </p>
       </div>
     </div>
