--- a/Pagina_web/motivacion.html
+++ b/Pagina_web/motivacion.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>Página de Prueba</title>
     <style>
+
+      body {
+      overflow-x: hidden
+      }
       .a {
         text-decoration: none;
         border: 1px solid #333;
@@ -15,7 +19,7 @@
         right : 40px;
         top: 1rem;
         align-items: right;
-        border-radius: 5px;
+        border-radius: 3px;
         display: inline-block;
         position: absolute
         }
@@ -23,6 +27,7 @@
       display: flex;
       width: 100%;
       min-height: 309px;
+      max-width: 100%;
       padding: 0 1rem;
       object-fit: cover;
       position: relative;
@@ -41,15 +46,18 @@
 
       .rectangulo p {
         color: #004677;
-        margin: 1.0rem 0;
+        margin: 1.0rem 50;
+        font-size: 10rem
+
       
       }
 
       .afuera {
         color: #004677;
         text-align: center;
-        margin: 1rem 0;
-        font-size: 1rem;
+        margin: 2rem 1;
+        line-height: 1.6;
+        font-size: 2rem;
       }
     </style>
 </head>
@@ -60,7 +68,41 @@
       <a class="a" onclick="window.location.href='index.html'">Volver</a>
       <h1 style="color: #007bff rgb(0, 0, 255);text-align: center">Motivación de este Proyecto</h1>
     </div> 
-    <p class="afuera"style="color: #007bff rgb(0, 0, 255);text-align: center">Última modificación realizada por Constanza.</p>
+    <p class="afuera">
+    La investigación de nuestro grupo se debe a nuestro gran interés
+    <br>
+    en el impacto de la Pandemia sobre el NEM, debido a una notoria
+    <br> 
+    alza de los promedios de la enseñanza media en el periodo 
+    <br>
+    de 2020 a 2021. Nos interesó que frente a una gran emergencia 
+    <br>
+    sanitaria los promedios de los estudiantes seguían subiendo,
+    <br>
+    produciendo así una inflación en las notas.
+    <br><br>
+    Es este escenario el que produce nuestra pregunta principal y 
+    <br>
+    central de nuestro proyecto: ¿Esta alza es consecuencia 
+    <br>
+    directa de la metodología utilizada para la adaptación en la
+    <br>
+     enseñanza o es una tendencia que ya estaba implementada de antes?
+    <br><br>
+    También nos dio curiosidad si esta alza es igual dependiendo del tipo
+    <br>
+    de Establecimiento Educacional (municipal, subvencionado y privado),
+    <br> 
+    si es Técnico o Científico Humanista o si influye la comuna en donde
+    <br> 
+    se estudia. Podemos estudiar si un buen promedio es reflejo de un buen rendimiento
+    <br>
+    y lo probaremos con la discrepancia notable entre los resultados del
+    <br> 
+    rendimiento del NEM y los de la PAES, lo que avivó nuestra
+    <br> 
+    atención a los efectos que ocasionó la Pandemia en el desempeño académico.
+    </p>
 
 </body>
 </html>
